# claude-architect

./: CLAUDE.md  Cargo.toml  PKGBUILD  README.md  claude-architect.service  deploy.sh
src/: lib.rs
