[package]
name = "claude-architect"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claude-architect"
path = "src/bin/server.rs"

[[bin]]
name = "claude-architect-mcp"
path = "src/bin/mcp.rs"

[[bin]]
name = "claude-architect-hook"
path = "src/bin/hook.rs"

[[bin]]
name = "claude-architect-ctl"
path = "src/bin/ctl.rs"

[dependencies]
anyhow = "1"
dirs = "6"
peercred-ipc = { path = "../../lib/peercred-ipc" }
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "7"

[dev-dependencies]
rmp-serde = "1"
